--- a/1_instruction_tuning/notebooks/chat_templates_example.ipynb
+++ b/1_instruction_tuning/notebooks/chat_templates_example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -21,22 +21,32 @@
     "id": "K-lZu8JvtwUN",
     "outputId": "c3871418-15bc-4265-ae8d-6d6036036d0e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Note: Environment variable`HF_TOKEN` is set and is the current active token independently from the token you've just configured.\n"
+     ]
+    }
+   ],
    "source": [
     "# Install the requirements in Google Colab\n",
     "# !pip install transformers datasets trl huggingface_hub\n",
     "\n",
     "# Authenticate to Hugging Face\n",
+    "from dotenv import load_dotenv\n",
     "from huggingface_hub import login\n",
-    "\n",
-    "login()\n",
+    "import os\n",
+    "load_dotenv(dotenv_path=\"./.env\")\n",
+    "login(token=os.getenv(\"HF_TOKEN\"))\n",
     "\n",
     "# for convenience you can create an environment variable containing your hub token as HF_TOKEN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "tnHzBR7vtFlr"
    },
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "id": "zkJwILrbtFls"
    },
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -216,19 +226,7 @@
     "id": "pbAg-5x-tFls",
     "outputId": "5f9482db-1fcf-4c13-ccaa-ef3f6eff7f76"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conversation with template: <|im_start|>user\n",
-      "Hello, how are you?<|im_end|>\n",
-      "<|im_start|>assistant\n",
-      "I'm doing well, thank you! How can I assist you today?<|im_end|>\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_text = tokenizer.apply_chat_template(messages, tokenize=False)\n",
     "\n",
@@ -256,20 +254,7 @@
     "id": "mXUVdPeytFls",
     "outputId": "80870e53-7bc1-426e-ac33-ba6748e030fc"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conversation decoded: <|im_start|>user\n",
-      "Hello, how are you?<|im_end|>\n",
-      "<|im_start|>assistant\n",
-      "I'm doing well, thank you! How can I assist you today?<|im_end|>\n",
-      "<|im_start|>assistant\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_text = tokenizer.apply_chat_template(\n",
     "    messages, tokenize=True, add_generation_prompt=True\n",
@@ -292,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -300,15 +285,7 @@
     "id": "jc2PLxAMtFlt",
     "outputId": "d2098780-b3f4-41ec-a1f3-b6da2b593c62"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conversation tokenized: [1, 4093, 198, 19556, 28, 638, 359, 346, 47, 2, 198, 1, 520, 9531, 198, 57, 5248, 2567, 876, 28, 9984, 346, 17, 1073, 416, 339, 4237, 346, 1834, 47, 2, 198, 1, 520, 9531, 198]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_text = tokenizer.apply_chat_template(messages, add_generation_prompt=True)\n",
     "\n",
@@ -341,25 +318,7 @@
     "id": "qbkXV2_ItFlt",
     "outputId": "06deadc3-2c63-4660-d2bd-05096ef07c9f"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe\n",
-       "  src=\"https://huggingface.co/datasets/HuggingFaceTB/smoltalk/embed/viewer/all/train?row=0\"\n",
-       "  frameborder=\"0\"\n",
-       "  width=\"100%\"\n",
-       "  height=\"360px\"\n",
-       "></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.core.display import display, HTML\n",
     "\n",
@@ -476,7 +435,8 @@
     "def process_dataset(sample):\n",
     "    # TODO: 🐢 Convert the sample into a chat format\n",
     "    # use the tokenizer's method to apply the chat template\n",
-    "    return sample\n",
+    "    format_sample = tokenizer.apply_chat_template(sample['messages'], tokenize=False, add_generation_prompt=True)\n",
+    "    return { \"formated_sample\": format_sample }\n",
     "\n",
     "\n",
     "ds = ds.map(process_dataset)"
@@ -493,25 +453,7 @@
     "id": "81fQeazltFlu",
     "outputId": "36cf7148-9881-4f13-d0ce-76c82c4ab219"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe\n",
-       "  src=\"https://huggingface.co/datasets/openai/gsm8k/embed/viewer/main/train\"\n",
-       "  frameborder=\"0\"\n",
-       "  width=\"100%\"\n",
-       "  height=\"360px\"\n",
-       "></iframe>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\n",
     "    HTML(\n",
@@ -542,10 +484,20 @@
     "    # TODO: 🐕 Convert the sample into a chat format\n",
     "\n",
     "    # 1. create a message format with the role and content\n",
+    "    converted_sample = [\n",
+    "        {\n",
+    "            \"role\": \"user\", \n",
+    "            \"content\": sample[\"question\"]},\n",
+    "        {\n",
+    "            \"role\": \"assistant\",\n",
+    "            \"content\": sample[\"answer\"],\n",
+    "        },\n",
+    "    ]   \n",
     "\n",
     "    # 2. apply the chat template to the samples using the tokenizer's method\n",
-    "\n",
-    "    return sample\n",
+    "    formated_sample = tokenizer.apply_chat_template(converted_sample, tokenize=False, add_generation_prompt=True)\n",
+    "    \n",
+    "    return { \"formated_sample\": formated_sample }\n",
     "\n",
     "\n",
     "ds = ds.map(process_dataset)"
@@ -570,7 +522,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "smol-course-py311",
    "language": "python",
    "name": "python3"
   },
@@ -584,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
